--- a/generator-calabonga-template/generators/Web/templates/root/Web.config
+++ b/generator-calabonga-template/generators/Web/templates/root/Web.config
@@ -17,7 +17,7 @@
       </system.Web>
   -->
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=sql;Initial Catalog=yeoman-generated-template;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=<%= sqlName %>;Initial Catalog=<%= sqlDatabaseName %>;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
